# NFDI4IngModelValidationPlatform

./: .gitignore  Pipeline.md  environment_benchmarks.yml  postBuild  pyproject.toml
.github/workflows/: merge-docs-to-notebooks.yml  run-benchmark-examples.yml  run-benchmark.yml  run-dumux-benchmark.yml  run-julia-benchmark.yml
benchmarks/common/: create_provenance.py  provenance.py  semantic_benchmark.py  upload_provenance.py  utils.py
benchmarks/linear-elastic-plate-with-hole/: Snakefile  environment_postprocessing.yml  generate_config.py  main_workflow_template.txt  metadata4ing.config  parameter_extractor.py  parameters_003125.json  parameters_00625.json  parameters_0125.json  parameters_geo1fun2.json  parameters_geo2fun2.json  parameters_geo2fun2fine.json  plot_metrics.py  sim_tool_snakefile_generator.py  summarize_results.py  tool_workflow_template.txt  upload_provenance.py  validate_provenance.py  workflow_config.json
benchmarks/linear-elastic-plate-with-hole/extendablefem/: Project.toml  Snakefile  run_extendablefem_simulation.jl
benchmarks/linear-elastic-plate-with-hole/fenics/: Snakefile
benchmarks/linear-elastic-plate-with-hole/tests/: fenics.csv  kratos.csv
benchmarks/notebooks/: RoCrate.ipynb
benchmarks/rotating-cylinders/: Snakefile  generate_rc_config.py  param_rot_cylin.json
benchmarks/rotating-cylinders/dumux/: Snakefile  dumux_input_gen.py
docs/benchmarks/linear elasticity/: plate-with-hole.md
notebooks/: plate_with_hole_Kratos.ipynb  plate_with_hole_fenics.ipynb
scripts/: merge_docs_to_notebook.py
src/: benchmarking.py
(+17 files in other folders)
